added single an double click event

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h3 class="heading">Hello {{title | titlecase}}</h3>
+<h3 class="heading">Hello 
+    {{title | titlecase}}</h3>
 <app-users></app-users>
