--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -4,7 +4,7 @@
 }
 
 .custom-card-header{
-    color: green;
+   color:darkolivegreen;
     margin: 20px;
 }
 
@@ -20,3 +20,14 @@ h2{
 h5{
     color: lightcoral
 }
+
+button{
+    background-color:rgb(136, 243, 202);
+    border-radius: 6px;
+    padding:8px;   
+}
+
+button:hover {
+    background-color: rgb(184, 226, 69);
+    cursor: pointer; /* Change cursor to pointer on hover */
+  }
