--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h3 class="heading">Hello 
-    {{title | titlecase}}</h3>
+<mat-accordion>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title> Hello, {{title | titlecase}}</mat-panel-title>
+            <mat-panel-description> This is a summary of the content </mat-panel-description>
+        </mat-expansion-panel-header>
+    </mat-expansion-panel>
+</mat-accordion>
 <app-users></app-users>
