--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title> Hello, {{title | titlecase}}</mat-panel-title>
-            <mat-panel-description> This is a summary of the content </mat-panel-description>
+            <mat-panel-description> Angular Basic Fatures </mat-panel-description>
         </mat-expansion-panel-header>
+        <p>Deep drive to each angular-18 features.</p>
     </mat-expansion-panel>
 </mat-accordion>
 <app-users></app-users>
