--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -15,7 +15,7 @@
 }
 
 h2 {
-    color: rgb(75, 104, 22)
+    color: rgb(16, 170, 231)
 }
 
 h5 {
@@ -38,4 +38,22 @@ button:hover {
 input{
     margin:8px;
     padding:8px;
+}
+
+img{
+    height: 400px;
+    width: 600px;
+}
+
+.block-color{
+    color:aqua;
+    background-color: rgb(247, 144, 144);
+    height: 300px;
+    width: 200px;
+}
+
+.context-menu{
+    background-color: blueviolet;
+    border: 1px solid black;
+    position: absolute;
 }
