adding parent to child communication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,5 @@
         <p>Deep drive to each angular-18 features.</p>
     </mat-expansion-panel>
 </mat-accordion>
-<app-users></app-users>
+<!-- <app-users></app-users> -->
+ <app-application-users></app-application-users>
