--- a/src/app/application-users/single-application-user/single-application-user.component.html
+++ b/src/app/application-users/single-application-user/single-application-user.component.html
@@ -1,1 +1,7 @@
-<p>{{userId+1}}.  {{userName | titlecase}}</p>
+<div>
+    {{userName | titlecase}}
+    <button mat-mini-fab (click)="emitDeleteIntemation()">
+        <mat-icon>delete</mat-icon>
+    </button>
+</div>
+
