--- a/src/app/application-users/application-users.component.css
+++ b/src/app/application-users/application-users.component.css
@@ -12,3 +12,13 @@ h2 {
     margin: 10px;
     padding: 10px;
 }
+
+.parent {
+    padding: 5px 5px;
+    text-align:left;
+  }
+  .child {
+    display: inline-block;
+    margin-right:20px;
+    vertical-align: middle;
+  }
