--- a/src/app/application-users/application-users.component.css
+++ b/src/app/application-users/application-users.component.css
@@ -13,12 +13,29 @@ h2 {
     padding: 10px;
 }
 
-.parent {
-    padding: 5px 5px;
-    text-align:left;
+/* app.component.css */
+.custom-ordered-list {
+    padding: 0;
+    list-style-type: none; /* Remove default list styling */
   }
-  .child {
-    display: inline-block;
-    margin-right:20px;
-    vertical-align: middle;
+  
+  .list-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
   }
+
+  .item-name {
+    flex-grow: 1; /* Take up remaining space */
+    margin-right: 10px; /* Add space between the name and the button */
+  }
+  
+  .list-item button {
+    padding: 50px;
+  }
+  
+  
