adding updated package

--- a/src/app/application-users/single-application-user/single-application-user.component.html
+++ b/src/app/application-users/single-application-user/single-application-user.component.html
@@ -1,5 +1,6 @@
-
-<span> {{userName | titlecase}}</span>
+<div>
+    <span> {{userName | titlecase}}</span>
     <button class="delete-button" mat-icon-button (click)="emitDeleteIntemation()">
         <mat-icon>delete</mat-icon>
     </button>
+</div>
