--- a/src/app/application-users/application-users.component.html
+++ b/src/app/application-users/application-users.component.html
@@ -1,7 +1,7 @@
     <h2>Application Users</h2>
     <hr>
     <ol class="custom-ordered-list">
-        <li class="list-item"*ngFor="let name of appliationUserNames; let userId=index">
+        <li class="list-item" *ngFor="let name of applicationUsers; let userId=index">
             <app-single-application-user [userName]=name [userId]=userId
                 (deleteUser)="removeApplicationUser(userId)"></app-single-application-user>
             <!-- <button class="child" mat-mini-fab (click)="removeApplicationUser(userId)">
