--- a/src/app/application-users/single-application-user/single-application-user.component.css
+++ b/src/app/application-users/single-application-user/single-application-user.component.css
@@ -1,6 +1,19 @@
- .delete-button {
+.custom-header-row {
+  background-color: #3f51b5;
+  /* Example background color */
+  color: white;
+  /* Text color */
+}
 
-   color: brown;
-   flex-shrink: 0;
-   /* Prevent the button from shrinking */
- }
+button {
+  padding: 15px;
+  margin: 15px;
+}
+
+.add-button:hover {
+  background-color: chartreuse;
+}
+
+.remove-button:hover {
+  background-color: rgb(246, 40, 64);
+}
