--- a/src/app/application-users/add-user-form/add-user-form.component.css
+++ b/src/app/application-users/add-user-form/add-user-form.component.css
@@ -1,9 +1,11 @@
 .mat-field {
   padding: 5px;
   margin: 5px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: small
 }
 
 button {
-  padding: 15px;
-  margin: 15px;
+  padding: 15pt;
+    margin: 14pt;
 }
