--- a/src/app/application-users/add-user-form/add-user-form.component.html
+++ b/src/app/application-users/add-user-form/add-user-form.component.html
@@ -3,11 +3,11 @@
   <div class="conatiner">
     <form action="" class="user-add" [formGroup]="userForms">
       <mat-form-field appearance="fill" class="mat-field">
-        <mat-label>username</mat-label>
+        <mat-label>Username</mat-label>
         <input matInput formControlName="username" required>
       </mat-form-field>
       <mat-form-field appearance="fill" class="mat-field">
-        <mat-label>Full Name</mat-label>
+        <mat-label>Fullname</mat-label>
         <input matInput formControlName="fullName" required>
       </mat-form-field>
       <mat-form-field appearance="fill" class="mat-field">
@@ -18,7 +18,7 @@
         <mat-label>Email</mat-label>
         <input matInput formControlName="email" required>
       </mat-form-field>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="mat-field">
         <mat-label>Gender</mat-label>
         <mat-select formControlName="gender" required>
           <mat-option *ngFor="let gender of genders" [value]="gender">{{gender}}</mat-option>
@@ -32,7 +32,7 @@
         <mat-label>Salary</mat-label>
         <input matInput formControlName="sal" required>
       </mat-form-field>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="mat-field">
         <mat-label>Status</mat-label>
         <mat-select formControlName="isActive" required>
           <mat-option *ngFor="let status of statusList" [value]="status">{{status}}</mat-option>
