--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,4 @@
-<mat-accordion>
-    <mat-expansion-panel>
-        <mat-expansion-panel-header>
-            <mat-panel-title> Hello, {{title | titlecase}}</mat-panel-title>
-            <mat-panel-description> Angular Basic Fatures </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p>Deep drive to each angular-18 features.</p>
-    </mat-expansion-panel>
-</mat-accordion>
-<!-- <app-users></app-users> -->
- <app-application-users></app-application-users>
+<div class="container">
+  <app-user-form></app-user-form>
+  <app-user-list></app-user-list>
+</div>
