--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <div class="table-container">
-  <hr>
+
   <h4>Application Users</h4>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mat-table-responsive">
 
     <!-- Position Column -->
     <ng-container matColumnDef="userId">
@@ -27,10 +27,7 @@
       <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
     </ng-container>
     <!-- Name Column -->
-    <ng-container matColumnDef="password">
-      <th mat-header-cell *matHeaderCellDef> Password </th>
-      <td mat-cell *matCellDef="let element"> {{element.password}} </td>
-    </ng-container>
+
 
     <!-- Weight Column -->
     <ng-container matColumnDef="emailId">
@@ -74,7 +71,15 @@
       <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-raised-button color="primary">Edit</button>
+        <button mat-raised-button color="warn">Delete</button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns" class="mat-aplication-table"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="row"></tr>
   </table>
 </div>
