--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -39,7 +39,7 @@
         <mat-label>Age</mat-label>
         <input matInput mdInput type="number" formControlName="age">
       </mat-form-field>
-      <button type="submit" mat-raised-button color="primary">Add</button>
+    <button type="submit" class="styled-button">Add User</button>
     </form>
   </div>
 </div>
