--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -12,7 +12,10 @@
     <!-- Name Column -->
     <ng-container matColumnDef="userName">
       <th mat-header-cell *matHeaderCellDef> Username </th>
-      <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
+
+
+        <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
+
     </ng-container>
 
     <!-- Weight Column -->
@@ -74,8 +77,7 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-raised-button color="primary">Edit</button>
-        <button mat-raised-button color="warn">Delete</button>
+        <button mat-raised-button color="primary" (click)="onEdit(element)">Edit</button>
       </td>
     </ng-container>
 
